# SwiftGUI-Logging

./: .gitignore  README.md  pyproject.toml
src/SwiftGUI_Logging/: ExceptionHandling.py  MemoryHandlerRotatingBuffer.py  Utils.py  __init__.py
src/SwiftGUI_Logging/Configs/: ExceptionLogging.py  __init__.py
tests/: Combined.py  minesweeper.py  test.py
